# Coding-challenge

./: CMakeLists.txt  LICENSE  README.md  first_exercice.cpp  first_exercice.py  first_exercice.xml  myWindow.cpp  myWindow.hpp  ui_mainwindow.h
